tests/golden/fixtures/syntax-symbolic-subscripts-err-unsupported-field-type/expected.err
Error: invalid syntax: invalid overlay field declaration '.a:dword': unsupported field type 'dword'; inside brackets: [
  .a:dword
]
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-unsupported-field-type/input.k65:1:8 ]
   │
 1 │ ╭─▶ var foo[
   ┆ ┆   
 3 │ ├─▶ ] = 0x1234
   │ │                
   │ ╰──────────────── here
───╯

Error: invalid syntax: expected something else, found number literal
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-unsupported-field-type/input.k65:3:5 ]
   │
 3 │ ] = 0x1234
   │     ───┬──  
   │        ╰──── here
───╯

